# streamsphere

./: .tool-versions  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: build.yml  release.yml
client/: .gitignore  README.md  package-lock.json  package.json
client/example/: package.json
client/example/data/: index.html  package.json
client/example/data/src/: connection.ts  main.ts
client/example/media/: package.json
client/example/media/src/: connection.ts  main.ts
client/example/multiple/: package-lock.json  package.json
client/example/multiple/src/pages/: index.tsx  room.tsx
client/example/src/: connection.ts
client/rheomesh/: README.md  package.json  tsconfig.json
client/rheomesh/src/: config.ts  index.ts  publishTransport.ts  subscribeTransport.ts
client/rheomesh/tests/: jest.setup.js  publishTransport.spec.ts
client/rheomesh/tests/sdp/: sdp_audio_correct  sdp_audio_original  sdp_audio_video_correct  sdp_audio_video_original  sdp_video_audio_correct  sdp_video_audio_original
client/src/: connection.ts  main.ts
frontend/: package.json
frontend/example/: package.json
frontend/example/src/pages/: room.tsx
frontend/streamsphere/: package.json  tsconfig.json
frontend/streamsphere/src/: index.ts  transport.ts
sfu/: Cargo.toml  README.md
sfu/examples/: data_server.rs  media_server.rs  server.rs
sfu/src/: buffer.rs  config.rs  data_publisher.rs  data_subscriber.rs  data_track.rs  error.rs  lib.rs  media_engine.rs  media_track.rs  prober.rs  publish_transport.rs  publisher.rs  router.rs  subscribe_transport.rs  subscriber.rs  transport.rs
sfu/test_data/: sdp_audio_correct  sdp_audio_original  sdp_audio_video_correct  sdp_audio_video_original  sdp_video_correct  sdp_video_original
src/: error.rs  lib.rs  media_engine.rs  media_track.rs  publisher.rs  router.rs  subscriber.rs  transport.rs
