[package]
name = "streamsphere"
version = "0.1.0"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "WebRTC SFU server-side library for Rust."
license = "MIT"
repository = "https://github.com/h3poteto/streamsphere"
homepage = "https://github.com/h3poteto/streamsphere"

[dependencies]
