[package]
name = "streamsphere"
version = "0.1.0"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "WebRTC SFU server-side library for Rust."
license = "MIT"
repository = "https://github.com/h3poteto/streamsphere"
homepage = "https://github.com/h3poteto/streamsphere"

[dependencies]
enclose = "1.2.0"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = "1.38.0"
tracing = "0.1.40"
uuid = { version = "1.8", features = ["v4"] }
webrtc = "0.11.0"
webrtc-ice = "0.11.0"
