[package]
name = "rheomesh"
version = "0.1.0"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "WebRTC SFU server-side library for Rust."
license = "MIT"
repository = "https://github.com/h3poteto/rheomesh"
homepage = "https://github.com/h3poteto/rheomesh"

[dependencies]
chrono = "0.4.38"
enclose = "1.2.0"
thiserror = "1.0.64"
tokio = "1.38.0"
tracing = "0.1.40"
uuid = { version = "1.8", features = ["v4"] }
webrtc = "0.11.0"
webrtc-ice = "0.11.0"

[dev-dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
tracing-actix-web = "0.7.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }